<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <androidx.appcompat.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:id="@+id/month_toolbar_inner"
        android:background="?attr/colorPrimary"
        android:layout_gravity="top"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/accounts_top_layout"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/prev_month_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/prev_month"
                android:focusable="true"
                android:src="@drawable/ic_chevron_left_black_24dp"
                app:tint="@color/colorTextInverse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/month_name_view"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/accounts_test_month"
                android:textAlignment="center"
                android:textColor="@color/colorTextInverse"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/prev_month_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/next_month_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/month_name_view"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/next_month"
                android:src="@drawable/ic_chevron_right_black_24dp"
                app:tint="@color/colorTextInverse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/month_name_view"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/return_to_today_bth"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="34dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/return_to_current_month"
                android:src="@drawable/ic_today_black_24dp"
                app:tint="@color/colorTextInverse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/next_month_btn"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
</merge>